# xai-generics

./: .gitignore  PROJECT_OVERVIEW.md  README.md  pyproject.toml
configs/2d/: README.md  dataset_t1_t2.yaml  dataset_t1_t2_fast.yaml  eval_t1_t2.yaml  prepare_t1_t2.yaml  prepare_t1_t2_legacy_cyclegan.yaml  radiomics_t2.yaml  reconstruct_t2_volumes.yaml  train_t1_t2_cyclegan.yaml  train_t1_t2_cyclegan_fast.yaml
docs/2D/: legacy_cyclegan_bridge.md  plan.md  runbook.md  spec.md  tasks.md
ipynb/: CycleGAN_T12FLAIR.ipynb  CycleGAN_batch1_RGB_CET1_T1_to_T2.ipynb  CycleGAN_batch1_RGB_T1_T2_.ipynb  Pre_operative(T2_radiomics).ipynb  rad_score_T2_to_FLAIR.ipynb
scripts/eval/: README.md  plot_t1_t2_training_loss.py  plot_t1_t2_validation_metrics.py  t1_t2_case_rankings.py  t1_t2_image_metrics.py  t1_t2_nrrd_metrics.py  t1_t2_nrrd_metrics_batch.py
scripts/postprocess/: README.md  reconstruct_t2_volumes.py
scripts/prepare/: README.md  t1_t2_2d_prepare.py
setting/: README.md  cycle_gan_rgb_cet1_t1_to_t2.md  cycle_gan_t12flair.md  cycle_gan_t1_t2.md  evaluation.md  prognosis_rad_score.md  radiomics_t2.md
src/xai_generics/: __init__.py  config.py
src/xai_generics/cli/: __init__.py  benchmark_t1_t2.py  extract_t1_t2_activation.py  generate_t1_t2.py  infer_t1_t2.py  inspect_t1_t2.py  smoke_train_t1_t2.py  train_t1_t2.py
src/xai_generics/data/: __init__.py  t1_t2_pairs.py
src/xai_generics/evaluation/: image_metrics.py
src/xai_generics/models/: __init__.py  cyclegan.py
src/xai_generics/training/: __init__.py  cyclegan_trainer.py
