[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "xai-generics"
version = "0.1.0"
description = "Reproducible local baseline utilities for MRI image translation experiments."
requires-python = ">=3.11"
dependencies = [
  "imageio>=2.37.0",
  "nibabel>=5.3.2",
  "numpy>=2.3.0",
  "pynrrd>=1.1.3",
  "PyYAML>=6.0.2",
  "torch>=2.6.0",
  "torchvision>=0.21.0",
  "torchaudio>=2.6.0",
  "matplotlib>=3.9.0",
  "scikit-image>=0.25.2",
  "scikit-learn>=1.7.0",
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
